# cpp-project-template

./: Basics.md  DevelopmentEnvironmentSetup.md  Makefile  ProjectHome.md
src/: CMakeLists.txt  app.cpp
tools/share/cmake/: DocumentationTargets.cmake
trunk/: CMakeLists.txt  Doxyfile  configure
trunk/src/: CMakeLists.txt  app.cpp  app.h
trunk/test/: CMakeLists.txt
trunk/tools/share/cmake/: FindLog4Cxx.cmake
wiki/: Basics.wiki  DevelopmentEnvironmentSetup.wiki  KnownBugs.wiki
